--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nativescript-google-maps-utils",
   "version": "0.1.2",
   "description": "NativeScript Google Maps SDK utility library to support features such as marker clustering, heatmap, ...",
-  "main": "index.js",
+  "main": "index",
   "nativescript": {
     "platforms": {
       "ios": "2.0.0",
@@ -10,7 +10,8 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "rsync -avz --delete ./*.js demo/dev/"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,9 @@
   },
   "homepage": "https://github.com/naderio/nativescript-google-maps-utils#readme",
   "devDependencies": {
-    "tns-core-modules": "*",
-    "typescript": "^1.8.10"
+    "tns-core-modules": "^2.5.2",
+    "tns-platform-declarations": "^2.5.2",
+    "typescript": "^2.1.6"
   },
   "dependencies": {
     "nativescript-google-maps-sdk": "*"
