--- a/platforms/android/include.gradle
+++ b/platforms/android/include.gradle
@@ -7,5 +7,5 @@ android {
 }
 
 dependencies {
-    compile 'com.google.maps.android:android-maps-utils:0.4.+'
+    compile 'com.google.maps.android:android-maps-utils:0.5'
 }
